<resources>
    <string name="app_name" translatable="false">Your Day</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_task_button_title">Add task</string>
    <string name="day_string">Day</string>
    <string name="week_string">Week</string>
    <string name="numb_test_string" translatable="false">1</string>
    <string name="time_string">Time:</string>
    <string name="time_example_string" translatable="false">10:15</string>
    <string name="task_example_name">Go to Lenta</string>
    <string name="empty_task_warning_string">There are no scheduled tasks here. You can rest!</string>
    <string name="time_interval_example_string" translatable="false">%1$s - %2$s</string>
    <string name="task_number_string">Number of task: %1$d</string><!-- 1.1.1970 - 7.1.1970 -->
    <string-array name="day_week_name">
        <item>MO</item>
        <item>TU</item>
        <item>WE</item>
        <item>TH</item>
        <item>FR</item>
        <item>SA</item>
        <item>SU</item>
    </string-array>
    <string name="name_task">Name Task</string>
    <string name="reminder_time_string">Reminder time</string>
    <string name="sticker_name_string">Sticker:</string>
    <string name="day_task">Day format: 1.1.1970</string>
    <string name="delete_space_error_string">Delete space in star Name!</string>
    <string name="empty_name_task_error_string">Name task is Empty!</string>
    <string name="duplicate_task_error">Error! This task time is active!</string>
    <string name="notify_title_string">Time to complete the task!</string>
    <string name="change_input_type_day_format_string">Set input type \"text\" in day format</string>
</resources>